[DROOLS-1779] JDK9: add additional Java EE deps for javadoc plugin
These additional deps are required by javadoc as the EE APIs are not
enabled by default in JDK9.

Also, we can _not_ just use "--add-modules java.se.ee", because that module
does not contain complete APIs and e.g. javax.transaction.TransactionSynchronizationRegistry
is missing which leads to javadoc errors.